# django-ratelimit

./: .gitignore  .travis.yml  CHANGELOG  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  django-ratelimit.spec  fabfile.py  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py  test_settings.py  tox.ini  ניסוי
.github/actions/test/: action.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  test.yml
django_ratelimit/: __init__.py  admin.py  apps.py  checks.py  conf.py  core.py  decorators.py  exceptions.py  middleware.py  models.py  signals.py  tests.py
django_ratelimit/migrations/: 0001_initial.py  0002_exceededlimitrecord_last_blocked_at.py
django_ratelimit/record_handlers/: base.py  cache.py  database.py  helpers.py  proxy.py
django_ratelimit/tests/: __init__.py  test_async.py  test_core.py  test_sync.py
docs/: Makefile  conf.py  contributing.rst  index.rst  install.rst  installation.rst  keys.rst  rates.rst  security.rst  settings.rst  upgrading.rst  usage.rst
docs/cookbook/: 429.rst  index.rst  per-user.rst
examples/test-app/: settings.py
ratelimit/: __init__.py  admin.py  apps.py  compat.py  conf.py  core.py  decorators.py  exceptions.py  helpers.py  keys.py  middleware.py  mixins.py  models.py  signals.py  tests.py  utils.py
ratelimit/backends/: __init__.py  cache.py  cachebe.py  redis.py
ratelimit/contrib/drf/: __init__.py
ratelimit/migrations/: 0002_exceededlimitrecord_last_blocked_at.py
ratelimit/record_handlers/: cache.py  database.py  helpers.py  proxy.py
ratelimit/tests/: test_core.py  urls.py
(+7 files in other folders)
